add record counts to concepts
